--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,18 @@
-theme: jekyll-theme-cayman
+# Setup
+title:        cuiliyan's blog
+tagline:      一个用来存放我的作品的地方
+baseurl:      ""
+paginate:     1
+
+# About/contact
+author:
+  name: cuiliyan
+  email: ly444983@live.com
+  url: mailto:ly444983@live.com
+
+# Gems
+gems:
+  - jekyll-paginate
+
+#Others
+markdown: kramdown
